# Thesis_wpi

ccm_tracking_controller/: CMakeLists.txt  LICENSE  package.xml
ccm_tracking_controller/cfg/: ccm_controller_param.yaml
ccm_tracking_controller/include/: CCMtrackingController.cpp  CCMtrackingController.h  utils.h
ccm_tracking_controller/include/CCM/: Geodesic.cpp  Geodesic.h  asl_traj_ctrl.cpp  ccmcontroller.cpp  ccmcontroller.h  ccmutils.cpp  ccmutils.h
ccm_tracking_controller/launch/: tracking_controller.launch
ccm_tracking_controller/msg/: CCMTarget.msg
ccm_tracking_controller/src/: ccm_tracking_controller_node.cpp
